<resources>
    <string name="app_name">바이투게더</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity">SplashActivity</string>
    <string name="menu_all">모든 딜 보기</string>
    <string name="menu_wish">위시 딜 보기</string>
    <string name="menu_make">딜 만들기</string>
    <string name="menu_make_wish">위시딜 만들기</string>
    <string name="menu_admin">관리자 메뉴</string>
    <string name="menu_seller">나의 판매딜</string>
    <string name="menu_bookmark">즐겨찾기</string>
    <string name="menu_myinfo">내 정보 수정</string>
    <string name="menu_mydeal">나의 딜/위시딜 상태</string>
    <string name="menu_logout">로그아웃</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="big_category_prompt">대분류</string>
    <string name="small_category_prompt">소분류</string>

    <string-array name="big_category_arrays">
        <item>전체보기</item>
        <item>패션/잡화</item>
        <item>뷰티</item>
        <item>식품</item>
        <item>주방/생활용품</item>
        <item>가구/홈데코</item>
        <item>가전/디지털</item>
        <item>스포츠/레저용품</item>
        <item>도서/문구/취미</item>
        <item>애완용품</item>
    </string-array>

    <string-array name="small_category_arrays_fashion">
        <item>전체보기</item>
        <item>여성의류</item>
        <item>남성의류</item>
        <item>아동</item>
        <item>신발</item>
        <item>가방/소품</item>
        <item>시계/주얼리</item>
    </string-array>

    <string-array name="small_category_arrays_beauty">
        <item>전체보기</item>
        <item>기초화장품</item>
        <item>클렌징</item>
        <item>메이크업</item>
        <item>헤어/네일</item>
        <item>바디/핸드</item>
        <item>남성화장품</item>
    </string-array>

    <string-array name="small_category_arrays_food">
        <item>전체보기</item>
        <item>농/수/축산식품</item>
        <item>가공식품</item>
        <item>음료/간식</item>
        <item>건강/다이어트식품</item>
        <item>유아동식품</item>
    </string-array>


    <string-array name="small_category_arrays_living">
        <item>전체보기</item>
        <item>주방용품</item>
        <item>위생/세안/욕실용품</item>
        <item>청소/세탁/세제</item>
        <item>수납/공구/생활잡화</item>
        <item>건강생활용품</item>
    </string-array>

    <string-array name="small_category_arrays_furniture">
        <item>전체보기</item>
        <item>침실/수납가구</item>
        <item>거실/주방가구</item>
        <item>유아동/학생가구</item>
        <item>침구/카펫/커튼</item>
        <item>인테리어소품</item>
    </string-array>

    <string-array name="small_category_arrays_digital">
        <item>전체보기</item>
        <item>컴퓨터/게임</item>
        <item>카메라/빔</item>
        <item>디지털/악세사리</item>
        <item>TV/오디오</item>
        <item>생활가전</item>
        <item>주방가전</item>
    </string-array>

    <string-array name="small_category_arrays_sport">
        <item>전체보기</item>
        <item>스포츠/기능화</item>
        <item>스포츠의류</item>
        <item>레포츠용품</item>
        <item>자동차용품</item>
        <item>해외직구</item>
    </string-array>

    <string-array name="small_category_arrays_goods">
        <item>전체보기</item>
        <item>유아동도서</item>
        <item>일반도서</item>
        <item>문구/팬시</item>
        <item>취미</item>
    </string-array>

    <string-array name="small_category_arrays_pet">
        <item>전체보기</item>
        <item>강아지용품</item>
        <item>고양이용품</item>
        <item>관상어/소동물</item>
    </string-array>






    <string-array name="bank">
        <item>신한</item>
        <item>우리</item>
        <item>국민</item>
        <item>우체국</item>
        <item>농협</item>
        <item>하나</item>
        <item>외환</item>
        <item>기업</item>
        <item>SC</item>
    </string-array>



    <string-array name="number">
        <item>010</item>
        <item>011</item>
        <item>016</item>
        <item>017</item>
        <item>018</item>
        <item>019</item>
        <item>02</item>
        <item>031</item>
        <item>032</item>
        <item>033</item>
        <item>041</item>
        <item>042</item>
        <item>043</item>
        <item>044</item>
        <item>051</item>
        <item>052</item>
        <item>053</item>
        <item>054</item>
        <item>055</item>
        <item>061</item>
        <item>062</item>
        <item>063</item>
        <item>064</item>
        <item>0502</item>
        <item>0503</item>
        <item>0504</item>
        <item>0505</item>
        <item>070</item>
        <item>080</item>
    </string-array>
    <string name="title_activity_detail_deal">DetailDealActivity</string>
    <string name="title_activity_find">FindActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_find_pw">FindPWActivity</string>


</resources>
