<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slide_backgroud"
    android:orientation="vertical" >


    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/button" />
    </LinearLayout>

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:background="#ff5c5b5a"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">



                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:background="@color/slide_tab_backgroud">


                    <com.chocoroll.buyto.Model.MyTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="menu_hi"
                        android:textColor="#686868"
                        android:padding="10dp"
                        android:textSize="15dp"
                        android:id="@+id/menu_hi" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/slide_line"></LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal"
                        android:id="@+id/menu_myinfo">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />
                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:textColor="#686868"
                            android:text="@string/menu_myinfo"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/slide_line"></LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal"
                        android:id="@+id/menu_logout">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />
                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:textColor="#686868"
                            android:text="@string/menu_logout"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/slide_line"></LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:id="@+id/menu_seller">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />


                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:text="@string/menu_seller"
                            android:textColor="#686868"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/slide_line"></LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal"
                        android:id="@+id/menu_mydeal">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />
                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:textColor="#686868"
                            android:text="@string/menu_mydeal"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>


                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listViewDeal"
                        android:layout_gravity="center_horizontal" />




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/slide_line"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:background="@color/slide_tab_backgroud">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal"
                        android:id="@+id/menu_all">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />


                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:textColor="#686868"
                            android:text="@string/menu_all"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/slide_line"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:id="@+id/menu_wish">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />


                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:text="@string/menu_wish"
                            android:textColor="#686868"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/slide_line"></LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:id="@+id/menu_make">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />


                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:text="@string/menu_make"
                            android:textColor="#686868"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/slide_line"></LinearLayout>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listViewBookMark"
                        android:layout_gravity="center_horizontal" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:id="@+id/menu_bookmark">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/left_menu" />


                        <com.chocoroll.buyto.Model.MyTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="17dp"
                            android:text="@string/menu_bookmark"
                            android:textColor="#686868"
                            android:textSize="20dp"
                            android:typeface="sans" />

                    </LinearLayout>



                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listViewBookmark" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/slide_line"></LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="#ffcecece">

                    <com.chocoroll.buyto.Model.MyTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textPush"
                        android:textColor="#686868"/>


                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listViewPush"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>